3.0
    removed setEncodingManager use setProfiles instead or for more custom requirements use GraphHopper.getEncodingManagerBuilder
    CustomWeighting language breaks old format but is more powerful and easier to read; it also allows factors >1 for server-side CustomModels
    renamed GHUtilities.setProperties to setSpeed
    Helper.createFormatter is using the ENGLISH Locale instead of UK, see #2186
    the name of an encoded value can only contain lower letters, underscore or numbers. It has to start with a lower letter
    default for GraphHopperMatrixWeb (client for Matrix API) is now the sync POST request without the artificial polling delay in most cases
    refactored TransportationMode to better reflect the usage in source data parsing only
    customizable routing is included in the endpoint /route (under the "custom_model" entry) and does not need to be enabled
    the format of customizable routing completely changed but the maps demo includes a simple editor to learn it easily (#2239). See #2209 and #2251. See examples in this blog post: https://www.graphhopper.com/blog/2020/05/31/examples-for-customizable-routing/
    removed Dockerfile
    the second argument of the VirtualEdgeIteratorState constructor is now an edge key (was an edge id before)
    removed instruction annotations(cycleway, off_bike, ford, ferry, private, toll)
    the boundaries file is now expected to provide the countrycodes via the `ISO3166-1:alpha3` property

2.0
    AbstractFlagEncoder#getMaxSpeed returns now Double#NaN instead of -1 if no maxspeed was found
    renamed QueryResult -> Snap
    much faster CH preparation (node- and edge-based), but increased memory usage during preparation, #2132
    added navigation repo #2071
    use Java 8 also for core, client-hc and reader-osm modules. all modules use Java 8 now
    removed android demo, #1940
    added edge key path detail, #2073
    fixed bug for turn restrictions on bridges/tunnels, #2070