@@ -29,13 +29,6 @@
             <version>${project.parent.version}</version>
         </dependency>
 
-        <!-- required only for isochrone calculation -->
-        <dependency>
-            <groupId>com.graphhopper</groupId>
-            <artifactId>graphhopper-isochrone</artifactId>
-            <version>${project.parent.version}</version>
-        </dependency>
-
         <!-- you can use this for logging or any slf4j log implementation -->
         <dependency>
             <groupId>org.slf4j</groupId>
