@@ -1,4 +1,5 @@
 3.0
+    moved the isochrone module into core
     removed setEncodingManager use setProfiles instead or for more custom requirements use GraphHopper.getEncodingManagerBuilder
     CustomWeighting language breaks old format but is more powerful and easier to read; it also allows factors >1 for server-side CustomModels
     renamed GHUtilities.setProperties to setSpeed
